2005-09-13  Paul Eggert  <eggert@cs.ucla.edu>

	* Version 5.3.1-cvs.

	* src/expr.c (docolon): Add IF_LINT check to avoid GCC warning.

	* configure.ac: Don't invoke AC_CONFIGURE_HOST directly; AB_INIT
	does it for us, and our invocation evokes a diagnostic from
	Autoconf 2.59.

	* NEWS: date has a new --rfc-3339 option, and the old --iso-8601
	option is deprecated.  date and ls also have new time format
	specifiers %:z, %::z, %:::z.
	* src/date.c (TIME_SPEC_DATE): No longer needs to be nonzero, so
	remove the "=1".
	(TIME_SOEC_HOURS, TIME_SPEC_MINUTES): Must be at end now, so put
	them there.
	(time_spec_string, time_spec): Hours and minutes must be at
	start now, so put them there.
	(rfc_2822_format): Now a string constant, not a boolean.  All uses
	changed.
	(iso_8601_format, rfc_format): Remove.
	(RFC_3339_OPTION): New constant.
	(long_options): Add --rfc-3339.
	(usage): Add --rfc-3339.  Don't mention --iso-8601.
	Mention %:z, %::z, %:::z.
	(main): Simplify calculation of 'format'; it was getting too hairy
	to follow.  Add --rfc-3339.
	(show_date): Assume format arg is not NULL, which is the case
	now.  The default code is moved to 'main'.  This simplifies things
	and allows the default to be calculated just once.
	* tests/misc/date: Add tests for --rfc-3339.

2005-09-13  Jim Meyering  <jim@meyering.net>

	* Makefile.maint (GZIP_ENV): Add --rsyncable option.
	(makefile-check): Escape a `$' in a diagnostic.

	* configure.ac: Use AB_INIT (from autobuild).

2005-09-11  Jim Meyering  <jim@meyering.net>

	* src/factor.c (usage): Remove leading spaces in 2-line
	description, so that help2man doesn't mangle it.
	Reported by Justin Pryzby.

2005-09-10  Jim Meyering  <jim@meyering.net>

	csplit could produce corrupt output, given input lines longer than 8KB

	* src/csplit.c (load_buffer): Don't read from free'd memory
	when handling lines longer than the initial buffer length.
	(save_to_hold_area): Don't leak the previous hold_area buffer.