@@ -2,6 +2,16 @@
 
 	* Version 5.3.1-cvs.
 
+	* src/dd.c: Detect some very unlikely buffer overflows.
+	(INPUT_BLOCK_SLOP, OUTPUT_BLOCK_SLOP): New macros.
+	(MAX_BLOCKSIZE): Now accepts an arg.  All uses changed.
+	(page_size): New var.
+	(scanargs, skip, main): Use more-straightforward way to detect overflow.
+	(dd_copy): Use page_size rather than invoking getpagesize.
+	Use INPUT_BLOCK_SLOP, OUTPUT_BLOCK_SLOP.
+	(main): Set page_size.
+	Avoid a call to stat in the usual case where ftruncate succeeds.
+
 	* src/expr.c (docolon): Add IF_LINT check to avoid GCC warning.
 
 	* configure.ac: Don't invoke AC_CONFIGURE_HOST directly; AB_INIT
